--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
+    "react-bootstrap": "1.0.0-beta.16",
     "react-swipeable-views": "^0.13.1",
     "react-toastify": "^5.0.1",
     "sass-loader": "^7.0.1",
