--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^4.8.3",
     "react-bootstrap": "1.0.0-beta.16",
     "react-swipeable-views": "^0.13.1",
+    "react-text-mask": "5.4.3",
     "react-toastify": "^5.0.1",
     "sass-loader": "^7.0.1",
     "socket.io-client": "^2.1.0",
